fix: teampage mission alignment

--- a/client/src/pages/TeamPage.module.css
+++ b/client/src/pages/TeamPage.module.css
@@ -4,8 +4,17 @@ p {
   font-size: 18px;
 }
 
+.missionHeader {
+  background-color: #fff;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .wrapper {
   margin-top: 4rem;
+  background-color: #f7ede1;
 }
 
 .section {
@@ -16,7 +25,7 @@ p {
 
 .section div {
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 750px;
 }
 
 .section h2 {
